# ggpkviewer

./: Cargo.toml  README.md  flake.nix
ggpkcli/: Cargo.toml
ggpkcli/src/: main.rs
ggpklib/: Cargo.toml
ggpklib/src/: bundle_index.rs  dat.rs  dat_schema.rs  ggpk.rs  it.rs  lib.rs  translation.rs  utils.rs
ggpklib/src/poefs/: local.rs  mod.rs  online.rs
src/: bundle.rs  bundle_index.rs  dat.rs  dat_schema.rs  ggpk.rs  main.rs  translation.rs  utils.rs
src/poefs/: mod.rs  online.rs
