[package]
name = "ggpkviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
byteorder = "1.5"
anyhow = "1.0"
oozle = "0.1.5"
murmur2 = "0.1"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
regex = "1.10"
once_cell = "1.19"
