[package]
name = "ggpklib"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5"
anyhow = "1.0"
oozle = "0.1.5"
murmur2 = "0.1"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
once_cell = "1.19"
